# substring-zkp

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: circuit.rs  lib.rs  main.rs  params.rs  test.rs  test_constraint_system.rs  utils.rs  witness.rs
src/circuit_extend/: circuit_char.rs  circuit_num.rs  circuit_string.rs  ext_allocated_fr.rs  mod.rs
