[package]
name = "secret_string"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-gadgets = { package= "zkp-gadgets",git = "https://github.com/sec-bit/ckb-zkp.git"}
ckb-r1cs = { package= "zkp-r1cs",git = "https://github.com/sec-bit/ckb-zkp.git"}
ckb-groth16 = { package= "zkp-groth16",git = "https://github.com/sec-bit/ckb-zkp.git"}
ark-ff = { version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false, features = [ "derive" ] }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "0.2", default-features = false, features = [ "curve" ] }
sha2 = "0.9"

#ark-std = { version = "^0.3.0", default-features = false }
#ark-r1cs-std = { version = "^0.3.0", optional = true, default-features = false }
#ark-relations = { version = "^0.3.0", default-features = false  }

[dependencies.ark-std]
version = "0.2.0"
default-features = false

